examples/test/testpolicy4901.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4901
  namespace: namespace323
spec:
  podSelector:
    matchLabels:
      key29: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value18
      podSelector:
        matchLabels:
          key35: value16
          key43: value24
          key46: value4
